# BRIDGE

./: .gitignore  CHANGELOG.md  PERFORMANCE_ISOLATION_AUDIT.md  README.md  TRUSS_INTERNAL_OBSERVATION_IMPLEMENTATION.md  USAGE.md  go.mod  mise.toml
docs/: README.md  (+3 more)
others/legacy/original_refactored_tree/: FILE_MANIFEST.txt  README.md  REFACTORING.md  pyproject.toml
others/legacy/original_refactored_tree/docs/reports/: CLEAN_PRODUCTION_GUARD_REPORT.md  IMPLEMENTATION_ARCHITECTURE_SPEC_v0.0.1.md  IMPLEMENTATION_PIER_CABLE.md  MRPC_DG6_algorithmic_bottleneck_improvement_report.md  MRPC_DG6_budget_tuning_report.md  MRPC_DG6_budgeted_quality_iteration_report.md  MRPC_DG6_runtime_bottleneck_report.md  MRPC_DG6_specification_and_evaluation_report.md
others/legacy/original_refactored_tree/examples/: minimal.py
others/legacy/original_refactored_tree/src/bridge_py/: __init__.py  graph.py  route.py  types.py
others/legacy/original_refactored_tree/tests/architecture/: test_architecture_spec.py
others/legacy/original_refactored_tree/tests/integration/: test_basic.py  test_pier_cable.py
others/legacy/original_refactored_tree/tests/unit/: test_mrpc_cg.py  test_mrpc_dg5.py  test_mrpc_dg6.py
others/legacy/python_reference/: pyproject.toml
others/legacy/python_reference/tests/: test_anchor_pier_port.py  test_architecture_boundaries.py  test_component_rule_documents.py  test_repository_root_policy.py  test_traffic_ultrasound_integration.py  test_ultrasound_semantics.py
src/sdk/python/: README.md  pyproject.toml
src/sdk/python/examples/: async_route.py  common.py  error_handling.py  managed_server.py  server_client.py  solver.py
src/sdk/python/tests/: test_sdk.py
(+605 files in other folders)
