[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-py-reference"
version = "0.2.3"
description = "Python reference implementation of the BRIDGE anytime routing architecture"
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
bridge-py = "bridge_py.traffic.benchmark:main"
bridge-dg5-diagnose = "bridge_py.traffic.dg5_diagnostics:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bridge_py*"]
namespaces = false
