[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-py-reference"
version = "0.2.4"
description = "Python reference implementation of the BRIDGE architecture"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge_py*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["legacy"]
