[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-route-sdk"
version = "0.15.3"
description = "Python SDK for the BRIDGE route-search binary"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
bridge_sdk = ["bin/**/*", "binary-manifest.json"]
